# 9IADT-tech-challenge

./: README.md  package.json  pyproject.toml  requirements.txt  tech_challenge_fase2.ipynb
llm/: medical_agent.py  pipeline.py  prompts.py
model/: best_model.pkl
notebooks/: tech_challenge_fase1.ipynb  tech_challenge_fase2.ipynb
results/: ag_experiment_results.json  baseline_metrics.json  pipeline_results.csv
src/tech_challenge/: __init__.py  diagnosis.py  diagnosis_pipeline.py  experiments.py  explanation.py  paths.py
src/tech_challenge/adapters/: __init__.py  api.py
src/tech_challenge/llm/: __init__.py  medical_agent.py  prompts.py
src/tech_challenge/presentation/: __init__.py  formatting.py  streamlit_app.py
tests/: test_llm_chat_and_streamlit_rows.py
