[project]
name = "tech-challenge-fase2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<3.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn==1.8.0",
    "deap>=1.4.1",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "google-genai>=2.0.0",
    "google-generativeai>=0.8.0,<1.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.0.300",
    "langchain-google-genai>=0.0.2",
    "shap>=0.42.0",
    "numba>=0.59.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "streamlit>=1.35.0",
    "joblib>=1.3.0,<2.0.0",
    "httpx>=0.27.0",
    "tensorflow>=2.16.0,<2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tech_challenge"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tech_challenge"]
